# ChangeLog for dev-ruby/oauth-plugin
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  29 Sep 2011; Hans de Graaff <graaff@gentoo.org>
  oauth-plugin-0.4.0_pre7.ebuild:
  Add missing oauth2 dependency.

  29 Sep 2011; Hans de Graaff <graaff@gentoo.org>
  oauth-plugin-0.4.0_pre7.ebuild:
  Install upstream gemspec.

  29 Sep 2011; Hans de Graaff <graaff@gentoo.org>
  oauth-plugin-0.4.0_pre7.ebuild:
  Put 0.4 version into a separate slot since it may not be compatible with
  Rails 2.3.

*oauth-plugin-0.4.0_pre7 (25 Sep 2011)

  25 Sep 2011; Hans de Graaff <graaff@gentoo.org>
  +oauth-plugin-0.4.0_pre7.ebuild:
  Version bump.

  14 Jun 2011; Hans de Graaff <graaff@gentoo.org> oauth-plugin-0.3.14.ebuild:
  Add x86 keyword.

  26 Dec 2010; Hans de Graaff <graaff@gentoo.org>
  oauth-plugin-0.3.14.ebuild:
  Keyword ~x86-macos.

*oauth-plugin-0.3.14 (28 Oct 2010)

  28 Oct 2010; Hans de Graaff <graaff@gentoo.org>
  +oauth-plugin-0.3.14.ebuild, +metadata.xml:
  Initial import.
