@@ -1,16 +1,12 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST oauth-plugin-0.3.14.gem 32256 RMD160 df79c7cd2b4dfb2cda73db3f687f36e724eab40b SHA1 6fb672dc13b1f9f32fa95654bd8bc1cceca6b543 SHA256 1cebb50fd2f32b8af32e1babd048c5d0cdcf27fcc28586c23bb0b24383de4aef
-DIST oauth-plugin-0.4.0_pre7.tgz 47474 RMD160 27aa979f672fe56050cee898df0108cd5e2dc834 SHA1 8fef461f66d4df28bbf296c6d1201848efcf219e SHA256 f6c699dd00f27149d85d99321d861b6d29f498df9b9a6c367525200e1ac31bd5
-EBUILD oauth-plugin-0.3.14.ebuild 752 RMD160 046aa0f8697c312ed15530e78a37100b6f990524 SHA1 e6d4aa0579b9b7dab6e33c1f6b48f05428852640 SHA256 0822a531bf5202d72d4a2a93a569da96d97e39b1b436c8c2a0854d7fd97a473a
-EBUILD oauth-plugin-0.4.0_pre7.ebuild 967 RMD160 fb9e4d1d6d00d839532997ef1f3975f50fc16f63 SHA1 57f0240143228c91745cf11fef3fa86bda20a6b0 SHA256 c2029fbc9e04f25d46871a8cf0ffb778131252506101f54c21ecd3e6da577a77
-MISC ChangeLog 1020 RMD160 0b89fd047bcd9eed44430c77f14d01a93215d66e SHA1 6719c5b37f3247d537c2d183ff1470c35fcfa840 SHA256 111b6ee107bba6e4e180655190868bad945c4e428eaef54f559cf05f47ec752a
-MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
+DIST oauth-plugin-0.3.14.gem 32256 SHA256 1cebb50fd2f32b8af32e1babd048c5d0cdcf27fcc28586c23bb0b24383de4aef SHA512 35db4b9dac63436c4dd73ace3de29b57a21a10262eb94a36094b3cd0bd67e676f05ac95e8c89207e80d105b448eb8eb7b46385d38c62b5a01d7332c2fa14a761 WHIRLPOOL 4493d59a6f95d768ff44c318e0bbafb955062589c5114fcff22d43502293255b96d78b135e033108744287a0c8319d83f019cd03c5bcfbc38e5e920decd5bab8
+DIST oauth-plugin-0.4.1.gem 54272 SHA256 d751892ba2eac6263971a409e0689d1c7dc8171a6c31d4f336e98b957e1d3331 SHA512 676936ebb90d31749f7528942274e3a0ae62bb5cb08b7b4343c3d8660fec0ae721ca827f2a56f9ed8f2671580ab1447a25683174ce2bb60d7bcd4942204ef18d WHIRLPOOL 59c9d1ec6a9b05df7d4dbcd6364de7773abb3a5f88052bde58192c934be5151e431baadf18396de9f6ffc85c5dfd2f801987953005ce827e28e773470d50e465
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAk6EXx8ACgkQiIP6VqMIqNetDAEAk7le9blo8QUawtHFvUhr9vzx
-IiSKpI7U1ttTRKjjZc8A/1Ykc2juWPabhDSAM1EcXHuShCer7XETqiNqkCfxw2Zw
-=fBik
+iF4EAREIAAYFAlArt9MACgkQiIP6VqMIqNfi2AD9HsfnowTH6r0WZLH7cXyY922B
+0jxBahbg66o6b/RReXUA/jTZgfSLUZMDwDIFLg9LVdZNkFAhYrIRUe/4WGk1bBxN
+=5STh
 -----END PGP SIGNATURE-----
