@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/oauth-plugin
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*oauth-plugin-0.4.1 (15 Aug 2012)
+
+  15 Aug 2012; Hans de Graaff <graaff@gentoo.org>
+  -oauth-plugin-0.4.0_pre7.ebuild, +oauth-plugin-0.4.1.ebuild:
+  Version bump with security fixes.
 
   29 Sep 2011; Hans de Graaff <graaff@gentoo.org>
   oauth-plugin-0.4.0_pre7.ebuild:
